RESOLVED FIXED256171
REGRESSION(259145@main): Crash when using 'currentcolor' with color-mix() in color property
https://bugs.webkit.org/show_bug.cgi?id=256171
Summary REGRESSION(259145@main): Crash when using 'currentcolor' with color-mix() in ...
Tim Nguyen (:ntim)
Reported 2023-05-01 12:08:07 PDT
Attachments
Tim Nguyen (:ntim)
Comment 1 2023-05-01 12:12:23 PDT
Tim Nguyen (:ntim)
Comment 2 2023-05-01 13:49:33 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/39787
EWS
Comment 3 2023-05-01 13:57:04 PDT
Committed 263556@main (0d0b8844e76c): <https://commits.webkit.org/263556@main> Reviewed commits have been landed. Closing PR #13333 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.