Cherry-pick 263556@main (0d0b8844e76c). https://bugs.webkit.org/show_bug.cgi?id=256171

REGRESSION(259145@main): Crash when using 'currentcolor' with color-mix() in color property
    https://bugs.webkit.org/show_bug.cgi?id=256171
    rdar://108698737

    Reviewed by Darin Adler.

    We were previously not handling `color-mix()` in the logic to resolve colors for `BuilderCustom::applyValueColor`.
    Use StyleColor::resolveColor() which properly takes care of all cases.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-color/color-mix-currentcolor-003-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-color/color-mix-currentcolor-003-ref.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-color/color-mix-currentcolor-003.html: Added.
    * Source/WebCore/style/StyleBuilderCustom.h:
    (WebCore::Style::BuilderCustom::applyValueColor):

    Canonical link: https://commits.webkit.org/263556@main