Source/WebCore/style/StyleBuilderCustom.h
@@ -2123,21 +2123,17 @@ inline void BuilderCustom::applyValueColor(BuilderState& builderState, CSSValue&
     auto& primitiveValue = downcast<CSSPrimitiveValue>(value);
 
     // For the color property, current color is actually the inherited computed color.
-    auto absoluteColorOrInheritColor = [&](const StyleColor& color) {
-        if (color.isCurrentColor()) {
-            auto& parentStyle = builderState.parentStyle();
-            return parentStyle.color();
-        }
-        return color.absoluteColor();
+    auto resolveColor = [&](const StyleColor& color) {
+        return color.resolveColor(builderState.parentStyle().color());
     };
-    
+
     if (builderState.applyPropertyToRegularStyle()) {
         auto color = builderState.colorFromPrimitiveValue(primitiveValue, ForVisitedLink::No);
-        builderState.style().setColor(absoluteColorOrInheritColor(color));
+        builderState.style().setColor(resolveColor(color));
     }
     if (builderState.applyPropertyToVisitedLinkStyle()) {
         auto color = builderState.colorFromPrimitiveValue(primitiveValue, ForVisitedLink::Yes);
-        builderState.style().setVisitedLinkColor(absoluteColorOrInheritColor(color));
+        builderState.style().setVisitedLinkColor(resolveColor(color));
     }
     builderState.style().setDisallowsFastPathInheritance();
 }
